# py-microservice

./: Dockerfile  README.md  README.rst  docker-compose.yml  pip.conf  pyproject.toml  run.py  wsgi.py
openapi/: specification.yaml
src/application/: __init__.py
src/kafka-operations/: KafkaPythonProducer.py
src/kafka_operations/: KafkaPythonConsumer.py  KafkaPythonProducer.py
src/monitoring/: __init__.py
